--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,4 +1,4 @@
-<ion-header>
+<!--<ion-header>
   <ion-navbar>
     <ion-buttons start>
       <button ion-button menuToggle>
@@ -7,7 +7,7 @@
     </ion-buttons>
     <ion-title>超武鬥組 Ultra Fighting Constituencies</ion-title>
   </ion-navbar>
-</ion-header>
+</ion-header>-->
 
 <ion-content>
 
