--- a/src/pages/post-list/post-list.html
+++ b/src/pages/post-list/post-list.html
@@ -6,11 +6,10 @@
         <ion-icon name="menu"></ion-icon>
       </button>
     </ion-buttons>
-    <ion-title>Posts</ion-title>
+    <ion-title>小說</ion-title>
   </ion-navbar>
 
 </ion-header>
-
 
 
 
