--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -22,22 +22,22 @@
 
 <ion-content class="content">
   <ion-card *ngFor="let post of posts" >
-    <ion-card-content >
+    <ion-card-content (click)="postTapped($event, post)">
       <ion-card-title [innerHTML]="post.title.rendered"></ion-card-title>
       <p [innerHTML]="post.excerpt.rendered"></p>
     </ion-card-content>
-    <ion-row no-padding>
+    <!--<ion-row no-padding>
        <ion-col>
          <button ion-button clear small color="primary" icon-start>
            {{post.date.split('T')[0]}}
          </button>
        </ion-col>
        <ion-col text-right>
-         <button ion-button small color="primary" (click)="postTapped($event, post)" icon-start>
+         <button ion-button small color="primary"  icon-start>
             Read More
          </button>
        </ion-col>
-     </ion-row>
+     </ion-row>-->
   </ion-card>
   <ion-infinite-scroll [enabled]="morePagesAvailable" (ionInfinite)="doInfinite($event)">
     <ion-infinite-scroll-content
