--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,4 +1,4 @@
-<ion-content padding class="form-content">
+<ion-content  class="form-content">
   <form class="form" [formGroup]="login_form" (ngSubmit)="login(login_form.value)">
     
     <!--<p class="skip-login"><a (click)="skipLogin()">Click here to skip login!</a></p>
@@ -17,7 +17,6 @@
    
     <ion-slides pager>
       <ion-slide>
-        
         <img src="assets/image/cover1_notext.jpg" class="slide-image"/>
       </ion-slide>
       <ion-slide>
