--- a/src/pages/gallery/gallery.html
+++ b/src/pages/gallery/gallery.html
@@ -27,7 +27,8 @@
     <ion-grid>
         <ion-row>
           <ion-col  (click)="postTapped($event, post)" col-12 col-sm-9 col-md-6 col-lg-4 col-xl-3 *ngFor="let post of posts">
-           {{post.title.rendered}}
+                
+           <div *ngIf="post.better_featured_image && post.better_featured_image.source_url"><ion-img width="100" height="100" src="{{post.better_featured_image.source_url}}"></ion-img></div>
           </ion-col>
         </ion-row>
       </ion-grid>
