--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,8 +1,8 @@
-<ion-header>
+<!--<ion-header>
   <ion-navbar color="primary">
     <ion-title *ngIf="!categoryTitle">小說連載</ion-title>
     <ion-title *ngIf="categoryTitle">{{categoryTitle}} posts</ion-title>
-    <!--<ion-buttons *ngIf="loggedUser" end>
+    <ion-buttons *ngIf="loggedUser" end>
       <button ion-button icon-only (click)="logOut()">
         <ion-icon class="toolbar-icon" name="log-out"></ion-icon>
       </button>
@@ -11,14 +11,14 @@
       <button ion-button icon-only (click)="goToLogin()">
         <ion-icon class="toolbar-icon" name="log-in"></ion-icon>
       </button>
-    </ion-buttons>-->
+    </ion-buttons>
     <ion-buttons end>
       <button ion-button icon-only menuToggle>
         <ion-icon name='menu'></ion-icon>
       </button>
     </ion-buttons>
   </ion-navbar>
-</ion-header>
+</ion-header>-->
 
 <ion-content class="content">
   <ion-card *ngFor="let post of posts" >
