--- a/src/pages/gallery/gallery.html
+++ b/src/pages/gallery/gallery.html
@@ -1,5 +1,19 @@
 
   
+  
+  
+  <ion-header>
+    <ion-navbar color="primary">
+      <ion-title>插畫</ion-title>
+     
+      <ion-buttons end>
+        <button ion-button icon-only menuToggle>
+          <ion-icon name='menu'></ion-icon>
+        </button>
+      </ion-buttons>
+    </ion-navbar>
+  </ion-header>
+  
   <ion-content class="content">
     
 
