--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,16 +1,5 @@
-<ion-header>
-  <ion-navbar color="primary">
-    <ion-title >超武鬥組</ion-title>
-    <ion-buttons end>
-      <button ion-button icon-only menuToggle>
-        <ion-icon name='menu'></ion-icon>
-      </button>
-    </ion-buttons>
-  </ion-navbar>
-</ion-header>
-
 <ion-tabs>
     <ion-tab tabIcon="ios-home-outline" [root]="homePage"></ion-tab>
-    <ion-tab tabIcon="ios-book-outline" [root]="categoriesPage"></ion-tab>
-    <ion-tab tabIcon="ios-images-outline" [root]="galleryPage"></ion-tab>
+    <ion-tab tabIcon="ios-book-outline" [root]="categoriesPage" [rootParams]="novelParams"></ion-tab>
+    <ion-tab tabIcon="ios-images-outline" [root]="galleryPage" [rootParams]="galleryParams" ></ion-tab>
 </ion-tabs>
