--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -27,8 +27,7 @@
   </ion-card>
   <ion-infinite-scroll threshold="50%" [enabled]="morePagesAvailable" (ionInfinite)="doInfinite($event)">
     <ion-infinite-scroll-content
-    loadingSpinner="bubbles"
-    loadingText="Loading more posts ...">
+    loadingSpinner="bubbles">
     </ion-infinite-scroll-content>
   </ion-infinite-scroll>
 </ion-content>
